<?xml version="1.0"?>
<package format="2">

  <name>mrs_vins_mono_core</name>
  <version>1.0.0</version>
  <description>The MRS vins_mono core metapackage</description>

  <author email="matej.petrlik@fel.cvut.cz">Matej Petrlik</author>
  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>vins_mono_vins_estimator</depend>
  <depend>vins_mono_feature_tracker</depend>
  <depend>vins_mono_pose_graph</depend>
  <depend>mrs_vins_mono_estimator_plugin</depend>
  <depend>mrs_vins_kickoff_estimator_plugin</depend>
  <depend>mrs_vins_republisher</depend>
  <depend>mrs_vins_imu_filter</depend>

</package>
